# sdwan-devops

./: .ansible-lint  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Jenkinsfile  Jenkinsfile.cleur-virl-build  Jenkinsfile.cleur-virl-k8s  Jenkinsfile.cleur-virl-test  Jenkinsfile.cleur-vmware-test  Jenkinsfile.crn  Jenkinsfile.crn_devel  Jenkinsfile.demo  Jenkinsfile.devel  Jenkinsfile.virl  Jenkinsfile.virl-k8s  Jenkinsfile.vmware  Jenkinsfile.vmware-k8s  Jenkinsfile.workshop  README.md  TODO.md  _manylinux.py  activate-policy.yml  ansible.cfg  ansible.cfg.docker  app-block.yml  attach-template.yml  blocked-app.yml  blocked-apps.yml  bootstrap-cedge.yml  build-aws.yml  build-ca.yml  build-cml.yml  build-tf.yml  build-virl.yml  build-vmware.yml  build.yml  check-network.yml  check-sdwan.yml  check-vmanage.yml  (+61 more)
.circleci/: README.md  config.yml
.github/: Dockerfile
ansible/: .ansible-lint  ansible.cfg  show-inventory.yml
concourse/: README.MD  README.md  ansible-3.sh  ansible-v2.sh  ansible.sh  aws_deploy_sdwan.py  aws_deploy_sdwan.sh  aws_deploy_sdwan_cluster_env.py  aws_key.sh  aws_key_vault.sh  aws_ubuntu_router_deploy.py  aws_vmanage_deploy.py  deploy_instances.sh  deploy_vmanage.sh  (+15 more)
config_builder/: README.md  config_build.py  metadata.yaml  pyproject.toml  requirements.txt
config_builder/src/config_builder/: __init__.py  __main__.py  __version__.py  commands.py
config_builder/src/config_builder/loader/: __init__.py  models.py  validators.py
config_builder/templates/: day-1_local.j2  day0_local.j2  day1_local.j2  local.j2  sdwan_inventory.j2
(+700 files in other folders)
